# pytemplates

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  codecov.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: codecov.yaml  test_build_release.yaml  test_build_release.yml
docs/: README.md
docs/source/: conf.py  index.rst  modules.rst  mypackage.rst  pytemplates.core.rst  pytemplates.rst
src/: app.py
src/mypackage/: __init__.py  app.py  my_module.py
src/pytemplates/: __init__.py  app.py  main.py
src/pytemplates/assets/: main.css
src/pytemplates/components/: __init__.py  body.py  header.py  whoami_table.py
src/pytemplates/routes/: all_routes.py
tests/: conftest.py  locustfile.py  test_app.py  test_module1.py  test_module2.py  test_my_module.py  test_performance.py
