[tool.poetry]
name = "pytemplates"
version = "1.0.0"
description = "A simple template for a plotly/dash frontend application."
repository = "https://github.com/crabtr26/pytemplates"
authors = ["crabtr26 <crabtr26@gmail.com>"]
license = "CC0 v1.0 Universal"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.8.0"
dash = "^2.4.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
asyncio_mode = "auto"
addopts = "-rf -vv --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
